<resources>
    <string name="app_name">FPO Khabar</string>
    <string name="read_more"><b><u>Read News</u></b></string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="fragtext">Beekeeping and honey processing is one of the socio-economic activities, which are friendly to forests and the environment in general. In many ecosystems, bees are important pollinators ensuring the maintenance of those ecosystems. For a long time, agriculture has recognised the value of pollination by bees.
    </string>
    <string name="this_friday_meet_andy_and_lindsey_stevens_of_happy_hens_n_tap_to_know_more">This Friday meet Andy and Lindsey Stevens of Happy Hens</string>
    <string name="_16_news">16 NEWS</string>
    <string name="daily_roundup">DAILY ROUNDUP</string>
    <string name="top_news_from_today_you_shouldn_t_miss">Top News from today you shouldn\'t miss</string>
    <string name="read_news">READ NEWS</string>
    <string name="swipe_up_for_skip">Swipe up for skip</string>
    <string name="insights">Insights</string>
    <string name="let_s_find_the_nimportant_things_here">Let\'s find the \nimportant things here</string>
    <string name="knowledge_series">Knowledge Series</string>
    <string name="trainer_programme">Trainer Programme</string>
    <string name="category">Category</string>
    <string name="search">Search...</string>
    <string name="all_news">All News</string>
    <string name="discover">Discover</string>
    <string name="large_ncardamom">Large \nCardamom</string>
    <string name="beekeeping_n_dnppcl">Beekeeping \n(DNPPCL)</string>
    <string name="banana_nculture">Banana \nCulture</string>
    <string name="fpo_khabar">FPO KHABAR</string>
    <string name="my_feed">My Feed</string>
    <string name="bookmark">Bookmark</string>
    <string name="trending">Trending</string>
    <string name="topics">Topics</string>
    <string name="agar_based_agroforestry">Agar based Agroforestry</string>
    <string name="drip_in_ncotton">Drip in \nCotton</string>
    <string name="cashew_nprocessing">Cashew \nProcessing</string>
    <string name="eucalyptus_nwith_paddy">Eucalyptus \nWith paddy</string>
    <string name="integrated_nfish_farming">Integrated \nFish farming</string>
    <string name="sugarcane_ninitiative">Sugarcane \nInitiative</string>
    <string name="facebook_app_id">1208734216574487</string>
    <string name="fb_login_protocol_scheme">fb757768665253730</string>
    <string name="facebook_client_token">e828406ab4dea92085ebf32e6e6f2f08</string>
    <string name="top_stories">Top Stories</string>
    <string name="unread">Unread</string>
    <string name="tap_to_know_more">Tap to Know More…</string>
    <string name="like">Like</string>
    <string name="share_khabar">Share Khabar</string>
    <string name="sign_in">Sign In</string>
    <string name="save_your_preferences">Save Your Preferences</string>
    <string name="sign_in_to_save_your_likes_nand_bookmarks">Sign in to save your Likes \nand Bookmarks</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="personalize_your_feed">Personalize Your Feed</string>
    <string name="hd_images">HD Images</string>
    <string name="auto_play">Auto Play</string>
    <string name="text_size">Text Size</string>
    <string name="share_this_app">Share this app</string>
    <string name="rate_this_app">Rate this app</string>
    <string name="feedback">Feedback</string>
    <string name="term_amp_conditions"><![CDATA[Term & conditions]]></string>
    <string name="privacy">Privacy</string>
    <string name="night_mode">Night Mode</string>

    <string name="twitter_consumer_key">SEoE6ipIwBpguGMKNAM0IKlWz</string>
    <string name="twitter_consumer_secret">6iTu5hPxstKuYeZZNJ0KXjZ7EgzYber4vlq1UQYM95cRlDtdTo</string>
    <string name="title_activity_twitter_sign_up_page">TwitterSignUpPage</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="choose_language">Choose Language</string>
</resources>